# Group3

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  compilation  directory.md  headers.h  ljmd.c  morse_potential.md  perf_summary_108.txt  perf_summary_2916.txt  perf_summary_78732.txt  run.sh  speedupleo.txt  test
build-mpi/: CMakeCache.txt  Makefile  cmake_install.cmake  libmd_lib.dylib  md
build-serial/: libmd_lib.dylib
buildserial/: libmd_lib.dylib
examples/: argon_108.xyz  argon_2.inp  argon_2.rest  argon_2916.xyz  o2_108.inp
include/: cleanup.h  compute_force.h  datastructure.h  headers.h  input.h  ljmd.h  output.h  utilities.h  velverlet.h
ljbuild/: CMakeCache.txt
python/: ljmd-python.py  ljmd-serial.py  ljmd.py  readme.md
src/: cleanup.c  compute_force.c  datastructure.c  input.c  main.c  main.cpp  output.c  utilities.c  velverlet.c
tests/: CMakeLists.txt  compute_force.c  compute_force.h  ljmd.h  test_compute_force.cpp  test_datastructure.cpp  test_utils.cpp  test_velverlet.cpp
trial1/: CMakeLists.txt
trial1/include/: headers.h
trial1/src/: cleanup.c  compute_force.c  input.c  main.c  main.cpp  output.c  utilities.c
